# RREAPER

./: .gitignore  checksum.c  checksum.h  config.def.h  eeprom.c  eeprom.h  ihex.c  ihex.h  main.c  makefile  parallel-port.c  parallel-port.h  spi.c  spi.h  uart.c  uart.h
driver/: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rreaper.py
firmware/: config.def.h  makefile
firmware/include/: crc.h  eeprom.h  error.h  ihex.h  serial.h  spi.h  uart.h
firmware/source/: checksum.c  crc.c  eeprom.c  ihex.c  main.c  serial.c
hardware/: .gitignore  rreaper.kicad_pcb  rreaper.kicad_prl  rreaper.kicad_pro  rreaper.kicad_sch  sym-lib-table
hardware/symbols/: avr16dd28.bak  avr16dd28.kicad_sym
include/: spi.h
